@@ -1,13 +1,16 @@
 Rewrite from pyeco.
 
-If you want permission of push/commit,
-send an email with your github account to pyeco.git@gmail.com.
-
-Step:
+Guide:
 * add "local,127.0.0.1:13000," to server.lst
 * run virtualeco_launcher
 * register user on http://127.0.0.1:13100/
 * copy and run pyecolauncher
+
+Support:
+saga17
+
+Contact:
+pyeco.git@gmail.com
 
 No more feature will be add because developer can't
 get any more resource of packet and script.
