@@ -1835,6 +1835,59 @@ KUJI_MAP= (
 			(10015401, 10, "高級粘土"),
 			(20050051, 10, "やつあたりかかし"),
 		)),
+		("プリティ・サーヴァント！", (
+			(10135900, 1, "白い使い魔・アルマ"),
+			(10136000, 1, "ゴシック風馬車"),
+			(10075285, 1, "使い魔の紹介状"),
+			(20050444, 1, "ネコマタプリティフリルハートＢＯＸ"),
+			(50081100, 1, "プリティウィング（白・黒レース）"),
+			(60144500, 1, "ロリータドレス♀（白）"),
+			(50011564, 1, "ホワイトバンテージ（白）"),
+			(60144600, 1, "プリティフリルベスト（黒）"),
+			(50228100, 1, "プリティフリルパンツ（黒）"),
+			(31092100, 1, "プリティフリルソファ（白）"),
+			(60095500, 1, "プリティフリルパラソル（黒）"),
+			(50228200, 1, "プリティフリルシューズ（白）"),
+			(20050157, 10, "お着替えカーテン"),
+			(20050132, 10, "チェス駒"),
+			(20050068, 10, "バット・イリュージョン"),
+		)),
+		("鏡祭月の双子", (
+			(10136100, 1, "カミアのエクソシストハート"),
+			(10136101, 1, "カンナのエクソシストハート"), #change_item
+			(50095000, 1, "肩乗せカンナ"),
+			(50095001, 1, "肩乗せカミア"), #change_item
+			(10075286, 1, "カミア・カンナの紹介状"),
+			(20050457, 1, "ネコマタエクソシストハートＢＯＸ"),
+			(50081200, 1, "双天使の翼（白）"),
+			(60144700, 1, "双天使のローブ（紺）"),
+			(30040019, 1, "教会の壁"),
+			(50228300, 1, "双天使のタイツ付きシューズ（紺）"),
+			(31062700, 1, "パイプオルガン"),
+			(50121900, 1, "双天使の帽子（紺）"),
+			(30050119, 1, "教会の床"),
+			(60033300, 1, "封魔の棺"),
+			(10031367, 1, "ヘアカラー・ミルクティー"),
+			(20050042, 10, "ハロウィンキャンドル"),
+			(20050069, 10, "ジャック・オ・ランタン"),
+		)),
+		("スチームパンク", (
+			(10136200, 1, "オートメディック・アルマ"),
+			(50081300, 1, "可変型活動補助装置"),
+			(10075287, 1, "スチームパンクの紹介状 "),
+			(20050470, 1, "ネコマタスチームパンクハートＢＯＸ"),
+			(60144900, 1, "機関技師のコート（茶）"),
+			(60145000, 1, "スチームパンクワンピース（茶）"),
+			(31062800, 1, "固定型天体望遠鏡"),
+			(50228500, 1, "機関技師のロングブーツ（茶）"),
+			(31062900, 1, "スチームファン・ライト（茶）"),
+			(50122200, 1, "スチームパンクハット（茶）"),
+			(50122300, 1, "機関技師モノクル（茶）"),
+			(31063000, 1, "額縁タペストリー（セピア）"),
+			(10031331, 1, "ヘアカラー・メタリックピンク"),
+			(20050084, 1, "高性能使い捨てカメラ"),
+			(20050068, 1, "バット・イリュージョン"),
+		)),
 	)),
 )
 
