@@ -1,3 +1,7 @@
+2012-11-05
+	update item category script
+	add shutdown command
+
 2012-10-18
 	update database to 348
 
